--- a/src/main/resources/templates/cadastro.html
+++ b/src/main/resources/templates/cadastro.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8"/>
 	<meta name="description" content="Gy-J"/>
 	<meta name="keywords" content="Gy-J, gyj"/>
-	<title>Gy-J - Entrar</title>
+	<title>Gy-J - Cadastro</title>
     <link rel="stylesheet" href="/css/pure/pure-min.css"/>
     <link rel="stylesheet" href="/css/GyjCustom.css"/>
 </head>
@@ -13,15 +13,18 @@
 <div class="format-login-cadastro">
 	<form class="pure-form pure-form-stacked" action="/login">
 	    <fieldset>
-	        <legend id="legend-login-cadastro">Entrar no Gyj</legend>
+	        <legend id="legend-login-cadastro">Cadastro</legend>
 	
+	        <label for="nome">Nome</label>
+	        <input id="nome" type="text" placeholder="Nome" name="nome"></input>
+	        
 	        <label for="email">Email</label>
 	        <input id="email" type="email" placeholder="Ex: gyj@gmail.com" name="email"></input>
 	
 	        <label for="senha">Senha</label>
 	        <input id="senha" type="password" placeholder="Senha" name="senha"></input>
 			<br></br>
-	        <button type="submit" class="button-login-cadastro pure-button pure-button-primary">Entrar</button>
+	        <button type="submit" class="button-login-cadastro button-login pure-button pure-button-primary">Cadastrar</button>
 	    </fieldset>
 	</form>
 </div>
