Implementa autenticação com Spring Security

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8"></meta>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"></meta>
@@ -163,11 +163,6 @@
             </div>
 
             <div class="l-box-lrg pure-u-1 pure-u-md-3-5">
-<<<<<<< HEAD
-                <h4>Contatos</h4>
-                <p>
-                   gyj@gmail.com
-=======
                 <h4>Contato</h4>
                 <p>
                     Aqui é Body Builder Ipsum PORRA! É 37 anos caralho! 
@@ -175,18 +170,13 @@
                     Ajuda o maluco que tá doente.
                     Ó o homem ali porra!, é 13 porra! 
                     Eu quero esse 13 daqui a pouquinho aí.
->>>>>>> origin/master
                 </p>
 
                 <h4>Mais informações</h4>
                 <p>
-<<<<<<< HEAD
-                    
-=======
                     Aqui é Body Builder Ipsum PORRA! Não vai dá não. Eita porra!, 
                     tá saindo da jaula o monstro! Eu quero esse 13 daqui a pouquinho aí. 
                     Bora caralho, você quer ver essa porra velho.
->>>>>>> origin/master
                 </p>
             </div>
         </div>
