--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -54,24 +54,39 @@
         </ul>
     </div>
 </div>
-
-<div class="content-wrapper">
-	<div class="resultadosBusca">
-		<span th:each="video : ${videosList}">
-		<div>
-			<a th:href="'https://www.youtube.com/watch?v=' + ${video.id}">
-				 <!-- <span th:text="${video.id}">A: </span> -->
-				 <img th:src="${video.thumbnail}">C: </img>
-				 <p th:text="${video.titulo}">B: </p>
-			</a>
-		</div>
-		</span>
-	</div>
-    <div class="youtubePlayer">
+	<!-- <div class="youtubePlayer">
     
         <iframe id="ytplayer" type="text/html" width="640" height="390"	src="http://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1" frameborder="0"/>
 
+    </div> 
+    -->
+    <div class="splash-container" >
+    	<div class="splash">
+    	<form class="pure-form" action="/buscar">
+    		<input type="text" class="pure-input-rounded"></input>
+    		<button type="submit" class="pure-button"><i class="fa fa-search"></i> Buscar</button>
+		</form>
+    	
+	        <span th:if="${vazio}">
+				<h1 class="content-head is-center">Sem videos, busque acima para adicionar na fila.</h1>
+			</span>
+    	</div>
     </div>
+<div class="content-wrapper">
+	
+	<div class="pure-g resultados">
+		
+		<span th:each="video : ${videosList}">
+			<div class="pure-u-1-3">
+				<a th:href="'https://www.youtube.com/watch?v=' + ${video.id}">
+					 <!-- <span th:text="${video.id}">A: </span> -->
+					 <img th:src="${video.thumbnail}"> </img>
+					 <p th:text="${video.titulo}">B: </p>
+				</a>
+			</div>
+		</span>
+	</div>
+    
 
     <div class="footer l-box is-center">
         2016 - GyJ - Todos os direitos reservados.
