--- a/src/main/resources/templates/cadastro.html
+++ b/src/main/resources/templates/cadastro.html
@@ -23,6 +23,9 @@
 	
 	        <label for="senha">Senha</label>
 	        <input id="senha" type="password" placeholder="Senha" name="senha"></input>
+	        
+	        <label for="conf-senha">Confirmar senha</label>
+	        <input id="conf-senha" type="password" placeholder="Senha" name="senha"></input>
 			<br></br>
 	        <button type="submit" class="button-login-cadastro button-login pure-button pure-button-primary">Cadastrar</button>
 	    </fieldset>
