--- a/src/main/resources/templates/cadastro.html
+++ b/src/main/resources/templates/cadastro.html
@@ -15,16 +15,20 @@
 	    <fieldset>
 	        <legend id="legend-login-cadastro">Cadastro</legend>
 	
-	        <label for="nome">Nome</label>
-	        <input id="nome" type="text" placeholder="Nome" name="nome"></input>
+	        <label for="nome">Nome:</label>
+	        <input class="size-input" id="nome" type="text" placeholder="Nome" name="nome"></input>
 	        
-	        <label for="email">Email</label>
-	        <input id="email" type="email" placeholder="Ex: gyj@gmail.com" name="email"></input>
+	        <label for="email">Email:</label>
+	        <input class="size-input" id="email" type="email" placeholder="Ex: gyj@gmail.com" name="email"></input>
 	
-	        <label for="senha">Senha</label>
-	        <input id="senha" type="password" placeholder="Senha" name="senha"></input>
+	        <label for="senha">Senha:</label>
+	        <input class="size-input" id="senha" type="password" placeholder="Senha" name="senha"></input>
+	        
+	        <label for="conf-senha">Confirmar senha:</label>
+	        <input class="size-input" id="conf-senha" type="password" placeholder="Confirmar Senha" name="conf-senha"></input>
+	        
 			<br></br>
-	        <button type="submit" class="button-login-cadastro button-login pure-button pure-button-primary">Cadastrar</button>
+	        <button type="submit" class="size-input button-login-cadastro button-login pure-button pure-button-primary">Cadastrar</button>
 	    </fieldset>
 	</form>
 </div>
