Atualizações no cadastro

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -64,7 +64,7 @@
     	<div class="splash">
     	<form class="pure-form" action="/buscar">
     		<input type="text" class="pure-input-rounded"></input>
-    		<button type="submit" class="pure-button"><i class="fa fa-search"></i> Buscar</button>
+    		<button type="submit" id="button-search" class="pure-button"><i class="fa fa-search"></i> Buscar</button>
 		</form>
     	
 	        <span th:if="${vazio}">
