--- a/src/main/resources/static/css/GyjCustom.css
+++ b/src/main/resources/static/css/GyjCustom.css
@@ -7,6 +7,8 @@
 	background-color: #1f8dd6;
 	padding: 10px;
 	margin-top:100px;
+	border-radius: 15px;
+	box-shadow: black 0.5em 0.5em 0.3em 
 }
 #legend-login-cadastro{
 	text-align: center;
@@ -25,4 +27,7 @@
 
 label{
 	color:white;
+}
+#button-search{
+	background-color: #2d3e50;
 }
