--- a/src/main/resources/templates/cadastro.html
+++ b/src/main/resources/templates/cadastro.html
@@ -7,28 +7,30 @@
 	<title>Gy-J - Cadastro</title>
     <link rel="stylesheet" href="/css/pure/pure-min.css"/>
     <link rel="stylesheet" href="/css/GyjCustom.css"/>
+    <script type="text/javascript" src="js/cadastro.js"></script> 
 </head>
 <body>
 
 <div class="format-login-cadastro">
-	<form class="pure-form pure-form-stacked" action="/login">
+	<form class="pure-form pure-form-stacked" action="" method="post">
 	    <fieldset>
 	        <legend id="legend-login-cadastro">Cadastro</legend>
 	
-	        <label for="nome">Nome:</label>
+	        <label for="nome">Nome*:</label>
 	        <input class="size-input" id="nome" type="text" placeholder="Nome" name="nome"></input>
 	        
-	        <label for="email">Email:</label>
+	        <label for="email">Email*:</label>
 	        <input class="size-input" id="email" type="email" placeholder="Ex: gyj@gmail.com" name="email"></input>
 	
-	        <label for="senha">Senha:</label>
+	        <label for="senha">Senha*:</label>
 	        <input class="size-input" id="senha" type="password" placeholder="Senha" name="senha"></input>
 	        
-	        <label for="conf-senha">Confirmar senha:</label>
+	        <label for="conf-senha">Confirmar senha*:</label>
 	        <input class="size-input" id="conf-senha" type="password" placeholder="Confirmar Senha" name="conf-senha"></input>
-	        
+	        <br></br>
+	        <span id="span">(*)Campos obrigatórios</span>
 			<br></br>
-	        <button type="submit" class="size-input button-login-cadastro button-login pure-button pure-button-primary">Cadastrar</button>
+	        <input type="submit" id="cadastrar" value="Cadastrar" class="size-input button-login-cadastro button-login pure-button pure-button-primary"></input>
 	    </fieldset>
 	</form>
 </div>
