Atualiza cadastro e home

--- a/src/main/resources/templates/cadastro.html
+++ b/src/main/resources/templates/cadastro.html
@@ -28,7 +28,9 @@
 	        <label for="conf-senha">Confirmar senha*:</label>
 	        <input class="size-input" id="conf-senha" type="password" placeholder="Confirmar Senha" name="conf-senha"></input>
 	        <br></br>
-	        <span id="span">(*)Campos obrigatórios</span>
+	        <span id="campos">(*)Campos obrigatórios</span>
+	        <br></br>
+	        <span id="confirmarSenha"></span>
 			<br></br>
 	        <input type="submit" id="cadastrar" value="Cadastrar" class="size-input button-login-cadastro button-login pure-button pure-button-primary"></input>
 	    </fieldset>
