--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -63,8 +63,9 @@
     <div class="splash-container" >
     	<div class="splash">
     	<form class="pure-form" action="/buscar">
-    		<input type="text" class="pure-input-rounded"></input>
-    		<button type="submit" id="button-search" class="pure-button"><i class="fa fa-search"></i> Buscar</button>
+    		<label>Pesquisa:</label>
+    		<input type="text" class="pure-input-rounded"></input> 
+    		<button type="submit" id="button-search" class="pure-button pure-button-primary pure-button-active"><i class="fa fa-search"></i> Buscar</button>
 		</form>
     	
 	        <span th:if="${vazio}">
