--- a/src/main/resources/templates/cadastro.html
+++ b/src/main/resources/templates/cadastro.html
@@ -12,7 +12,7 @@
 <body>
 
 <div class="format-login-cadastro">
-	<form class="pure-form pure-form-stacked" action="" method="post">
+	<form class="pure-form pure-form-stacked" action="">
 	    <fieldset>
 	        <legend id="legend-login-cadastro">Cadastro</legend>
 	
