Adiciona DAO e Model Academia

--- a/src/main/resources/templates/moderador/cadastroAcademia.html
+++ b/src/main/resources/templates/moderador/cadastroAcademia.html
@@ -7,11 +7,11 @@
 	<title>Gy-J - Cadastro de Academia</title>
     <link rel="stylesheet" href="/css/pure/pure-min.css"/>
     <link rel="stylesheet" href="/css/GyjCustom.css"/>
-    <script type="text/javascript" src="js/cadastro.js"></script> 
+    <script type="text/javascript" src="/js/cadastroAcademia.js"></script> 
 </head>
 <body>
 	<div class="format-login-cadastro">
-	<form class="pure-form pure-form-stacked" action="">
+	<form class="pure-form pure-form-stacked" action="" method="post">
 	    <fieldset>
 	        <legend id="legend-login-cadastro">Cadastro da academia</legend>
 	
@@ -31,7 +31,7 @@
 	        <input class="size-input" id="emailAcademia" type="email" placeholder="Email" name="emailAcademia"></input>
 	        
 	        <br></br>
-	        <span id="camposAcademia">(*)Campos obrigatórios</span>
+	        <span id="spanAcademia">(*)Campos obrigatórios</span>
 	        
 	        <input type="submit" id="cadastrarAcademia" value="Cadastrar" class="size-input button-login-cadastro button-login pure-button pure-button-primary"></input>
 	    </fieldset>
