--- a/src/main/resources/templates/user/home.html
+++ b/src/main/resources/templates/user/home.html
@@ -4,15 +4,10 @@
 <meta charset="utf-8"></meta>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"></meta>
 <meta name="description" content="Sua tela inicial."></meta>
-
-    <title>Gyj - Reprodutor Compartilhado</title>
-
-    
-
-
+<title>Gyj - Reprodutor Compartilhado</title>
 <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css"></link>
-
-
+<link rel="stylesheet" href="/css/GyjCustom.css"/>
+<script type="text/javascript" src="js/home.js"></script> 
 
 <!--[if lte IE 8]>
   
@@ -78,12 +73,18 @@
 	<div class="pure-g resultados">
 		
 		<span th:each="video : ${videosList}">
-			<div class="pure-u-1-3">
+			<div class="pure-u-1-3 videobox">
 				<a th:href="'https://www.youtube.com/watch?v=' + ${video.id}">
 					 <!-- <span th:text="${video.id}">A: </span> -->
 					 <img th:src="${video.thumbnail}"> </img>
-					 <p th:text="${video.titulo}">B: </p>
+					 <p th:text="${video.titulo}"> </p>
 				</a>
+				
+				<button class="pure-button" id="addMusica" th:name="${video.id}" th:onclick="'javascript:adicionarNaPlaylist(\'' + ${video.id} + '\');'">
+    				<i class="fa fa-plus-circle"></i>
+    				Adicionar
+				</button>
+				
 			</div>
 		</span>
 	</div>
