--- a/src/main/resources/templates/user/home.html
+++ b/src/main/resources/templates/user/home.html
@@ -71,22 +71,19 @@
 <div class="content-wrapper">
 	
 	<div class="pure-g resultados">
-		
-		<span th:each="video : ${videosList}">
-			<div class="pure-u-1-3 videobox">
-				<a th:href="'https://www.youtube.com/watch?v=' + ${video.id}">
-					 <!-- <span th:text="${video.id}">A: </span> -->
-					 <img th:src="${video.thumbnail}"> </img>
-					 <p th:text="${video.titulo}"> </p>
-				</a>
-				
-				<button class="pure-button" id="addMusica" th:name="${video.id}" th:onclick="'javascript:adicionarNaPlaylist(\'' + ${video.id} + '\');'">
-    				<i class="fa fa-plus-circle"></i>
-    				Adicionar
-				</button>
-				
-			</div>
-		</span>
+		<div class="pure-u-1-3 videobox" th:each="video : ${videosList}">
+			<a th:href="'https://www.youtube.com/watch?v=' + ${video.id}">
+				 <!-- <span th:text="${video.id}">A: </span> -->
+				 <img th:src="${video.thumbnail}"> </img>
+				 <p th:text="${video.titulo}"> </p>
+			</a>
+			
+			<button class="pure-button" id="addMusica" th:name="${video.id}" th:onclick="'javascript:adicionarNaPlaylist(\'' + ${video.id} + '\');'">
+   				<i class="fa fa-plus-circle"></i>
+   				Adicionar
+			</button>
+			
+		</div>
 	</div>
     
 
