Atualizacoes no PlaylistController

--- a/src/main/resources/templates/user/home.html
+++ b/src/main/resources/templates/user/home.html
@@ -70,7 +70,7 @@
     </div>
 <div class="content-wrapper">
 	
-	<div class="pure-g resultados">
+	<div class="content pure-g resultados">
 		<div class="pure-u-1-3 videobox" th:each="video : ${videosList}">
 			<a th:href="'https://www.youtube.com/watch?v=' + ${video.id}">
 				 <!-- <span th:text="${video.id}">A: </span> -->
