--- a/src/main/resources/templates/academias.html
+++ b/src/main/resources/templates/academias.html
@@ -50,7 +50,7 @@
             <li class="pure-menu-item pure-menu-selected"><a href="#" class="pure-menu-link">Home</a></li>
             <li class="pure-menu-item"><a href="#" class="pure-menu-link">Academias</a></li>
             <li class="pure-menu-item"><a href="/cadastro" class="pure-menu-link">Registrar</a></li>
-             <li class="pure-menu-item"><a href="/logout" class="pure-menu-link">Sair</a></li>
+             <li class="pure-menu-item"><a href="/logout" class="pure-menu-link">Entrar</a></li>
         </ul>
     </div>
 </div>
