Atualiza layout home , login , cadastro

--- a/src/main/resources/static/css/GyjCustom.css
+++ b/src/main/resources/static/css/GyjCustom.css
@@ -37,7 +37,9 @@ label{
 	margin: 10px;
 }
 .videobox{
-	margin: 1px;
+    text-align: center;
+    border: 1px solid #ddd;
+    padding: 10px;
 }
 .absolute-center-div{
     margin: auto;
