--- a/src/main/resources/templates/cadastro.html
+++ b/src/main/resources/templates/cadastro.html
@@ -56,16 +56,16 @@
 				        <legend id="legend-login-cadastro">Cadastro</legend>
 				
 				        <label for="nome">Nome*:</label>
-				        <input class="size-input" id="nome" type="text" placeholder="Nome" name="nome"></input>
+				        <input class="size-input" id="nome" type="text" placeholder="Nome" name="nome" required="required"></input>
 				        
 				        <label for="email">Email*:</label>
-				        <input class="size-input" id="email" type="email" placeholder="Ex: gyj@gmail.com" name="email"></input>
+				        <input class="size-input" id="email" type="email" placeholder="Ex: gyj@gmail.com" name="email" required="required"></input>
 				
 				        <label for="senha">Senha*:</label>
-				        <input class="size-input" id="senha" type="password" placeholder="Senha" name="senha"></input>
+				        <input class="size-input" id="senha" type="password" placeholder="Senha" name="senha" required="required"></input>
 				        
 				        <label for="conf-senha">Confirmar senha*:</label>
-				        <input class="size-input" id="conf-senha" type="password" placeholder="Confirmar Senha" name="conf-senha"></input>
+				        <input class="size-input" id="conf-senha" type="password" placeholder="Confirmar Senha" name="conf-senha" required="required"></input>
 				    
 				        <span id="errorCampos">(*)Campos obrigatórios</span>
 				        <br></br>
