--- a/src/main/resources/templates/moderador/cadastroAcademia.html
+++ b/src/main/resources/templates/moderador/cadastroAcademia.html
@@ -56,16 +56,16 @@
 				        <legend id="legend-login-cadastro">Cadastro da academia</legend>
 				
 				        <label for="nomeAcademia">Nome da academia*:</label>
-				        <input class="size-input" id="nomeAcademia" type="text" placeholder="Nome da academia" name="nomeAcademia"></input>
+				        <input class="size-input" id="nomeAcademia" type="text" placeholder="Nome da academia" name="nomeAcademia" required="required"></input>
 				        
 				        <label for="enderecoAcademia">Endereço*:</label>
-				        <input class="size-input" id="enderecoAcademia" type="text" placeholder="Rua Aqui - 123" name="enderecoAcademia"></input>
+				        <input class="size-input" id="enderecoAcademia" type="text" placeholder="Rua Aqui - 123" name="enderecoAcademia" required="required"></input>
 				
 				        <label for="cidadeAcademia">Cidade*:</label>
-				        <input class="size-input" id="cidadeAcademia" type="text" placeholder="Cidade" name="cidadeAcademia"></input>
+				        <input class="size-input" id="cidadeAcademia" type="text" placeholder="Cidade" name="cidadeAcademia" required="required"></input>
 				        
 				        <label for="telefoneAcademia">Telefone:</label>
-				        <input class="size-input" id="telefoneAcademia" type="text" placeholder="Telefone para contato" name="telefoneAcademia"></input>
+				        <input class="size-input" id="telefoneAcademia" type="number" placeholder="Telefone para contato" name="telefoneAcademia"></input>
 				        
 				        <label for="emailAcademia">Email:</label>
 				        <input class="size-input" id="emailAcademia" type="email" placeholder="Email" name="emailAcademia"></input>
