--- a/src/main/resources/templates/user/home.html
+++ b/src/main/resources/templates/user/home.html
@@ -43,7 +43,7 @@
 
         <ul class="pure-menu-list">
             <li class="pure-menu-item pure-menu-selected"><a href="#" class="pure-menu-link">Home</a></li>
-            <li class="pure-menu-item"><a href="#" class="pure-menu-link">Academias</a></li>
+            <li class="pure-menu-item"><a href="/academias" class="pure-menu-link">Academias</a></li>
             <li class="pure-menu-item"><a href="/cadastro" class="pure-menu-link">Registrar</a></li>
              <li class="pure-menu-item"><a href="/logout" class="pure-menu-link">Sair</a></li>
         </ul>
@@ -55,20 +55,23 @@
 
     </div> 
     -->
-    <div class="splash-container" >
-    	<div class="splash">
-    	<form class="pure-form" action="/home">
-    		<label>Pesquisa:</label>
-    		<input type="text" class="pure-input-rounded" name="q"></input> 
-    		<button type="submit" id="button-search" class="pure-button pure-button-primary pure-button-active"><i class="fa fa-search"></i> Buscar</button>
-		</form>
-    	
-	        <span th:if="${vazio}">
-				<h1 class="content-head is-center">Sem videos, busque acima para adicionar na fila.</h1>
-			</span>
-    	</div>
-    </div>
-<div class="content-wrapper">
+    
+    
+ <div>
+	 <div class="content-custom">
+			<div class="l-box-lrg pure-u-5-5">
+					<form class="pure-form-custom" action="/home">
+		    			<label>Pesquisa:</label>
+		    			<input type="text" class="pure-input-rounded" name="q"></input> 
+		    			<button type="submit" id="button-search" class="pure-button pure-button-primary pure-button-active"><i class="fa fa-search"></i> Buscar</button>
+					</form>
+					<span th:if="${vazio}">
+						<h3 class="content-head is-center">Sem videos, busque acima para adicionar na fila.</h3>
+					</span>
+					<br></br>
+					<hr></hr>
+			</div>
+	</div>
 	
 	<div class="content pure-g resultados">
 		<div class="pure-u-1-3 videobox" th:each="video : ${videosList}">
@@ -82,16 +85,14 @@
    				<i class="fa fa-plus-circle"></i>
    				Adicionar
 			</button>
-			
 		</div>
 	</div>
-    
-
-    <div class="footer l-box is-center">
-        2016 - GyJ - Todos os direitos reservados.
-    </div>
-
-</div>
-
+ </div>
+ 
+ <!--  
+	<div id="footer" class="footer l-box is-center">
+	     2016 - GyJ - Todos os direitos reservados.
+	</div>
+-->
 </body>
 </html>
