--- a/src/main/resources/templates/teste.html
+++ b/src/main/resources/templates/teste.html
@@ -4,15 +4,10 @@
 <meta charset="utf-8"></meta>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"></meta>
 <meta name="description" content="Sua tela inicial."></meta>
-<link rel="stylesheet" href="/css/GyjCustom.css"/> 
-    <title>Gyj - Reprodutor Compartilhado</title>
-
-    
-
-
+<title>Gyj - Reprodutor Compartilhado</title>
 <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css"></link>
-
-
+<link rel="stylesheet" href="/css/GyjCustom.css"/>
+<script type="text/javascript" src="js/home.js"></script> 
 
 <!--[if lte IE 8]>
   
@@ -47,39 +42,53 @@
         <a class="pure-menu-heading" href="">Gyj</a>
 
         <ul class="pure-menu-list">
-            <li class="pure-menu-item"><a href="/index" class="pure-menu-link">Home</a></li>
-            <li class="pure-menu-item"><a href="#" class="pure-menu-link">Academias</a></li>
+            <li class="pure-menu-item pure-menu-selected"><a href="#" class="pure-menu-link">Home</a></li>
+            <li class="pure-menu-item"><a href="/academias" class="pure-menu-link">Academias</a></li>
             <li class="pure-menu-item"><a href="/cadastro" class="pure-menu-link">Registrar</a></li>
              <li class="pure-menu-item"><a href="/logout" class="pure-menu-link">Sair</a></li>
         </ul>
     </div>
 </div>
-<div class="box-content">
-	<div class="content-custom">
-		<div class="l-box-lrg pure-u-5-5">
-				<form class="pure-form-custom" action="/home">
-	    			<label>Pesquisa:</label>
-	    			<input type="text" class="pure-input-rounded" name="q"></input> 
-	    			<button type="submit" id="button-search" class="pure-button pure-button-primary pure-button-active"><i class="fa fa-search"></i> Buscar</button>
-				</form>
-				<br></br>
-				<hr></hr>
-		</div>
+	<!-- <div class="youtubePlayer">
+    
+        <iframe id="ytplayer" type="text/html" width="640" height="390"	src="http://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1" frameborder="0"/>
+
+    </div> 
+    -->
+    
+    
+ <div class="box-content">
+	 <div class="content-custom">
+			<div class="l-box-lrg pure-u-5-5">
+					<form class="pure-form-custom" action="/teste">
+		    			<label>Pesquisa:</label>
+		    			<input type="text" class="pure-input-rounded" name="q"></input> 
+		    			<button type="submit" id="button-search" class="pure-button pure-button-primary pure-button-active"><i class="fa fa-search"></i> Buscar</button>
+					</form>
+					<span th:if="${vazio}">
+						<h3 class="content-head is-center">Sem videos, busque acima para adicionar na fila.</h3>
+					</span>
+					<br></br>
+					<hr></hr>
+			</div>
 	</div>
 	
-	<div class="content">
-		<div class="pure-u-5-5">
-			<h3 class="content-head is-center">Esse é nosso portfolio de clientes,<a href="/cadastro">crie sua conta e junte-se à eles.</a></h3>
-			 
-			<div class="box-academia pure-u-7-24" th:each="academia : ${academias}">
-				<h2 class="content-subhead" th:text="${academia.nome}"></h2>
-	            <p th:text="'Localizada em: ' + ${academia.cidade}"></p>
-			</div>
+	<div class="content pure-g resultados">
+		<div class="pure-u-1-3 videobox" th:each="video : ${videosList}">
+			<a th:href="'https://www.youtube.com/watch?v=' + ${video.id}">
+				 <!-- <span th:text="${video.id}">A: </span> -->
+				 <img th:src="${video.thumbnail}"> </img>
+				 <p th:text="${video.titulo}"> </p>
+			</a>
 			
-			
+			<button class="pure-button" id="addMusica" th:name="${video.id}" th:onclick="'javascript:adicionarNaPlaylist(\'' + ${video.id} + '\');'">
+   				<i class="fa fa-plus-circle"></i>
+   				Adicionar
+			</button>
 		</div>
 	</div>
-</div>
+ </div>
+ 
 <div class="footer l-box is-center">
         2016 - GyJ - Todos os direitos reservados.
 </div>
