Adiciona Listagem de academias e playlists

--- a/src/main/resources/templates/moderador/academia/playlists.html
+++ b/src/main/resources/templates/moderador/academia/playlists.html
@@ -13,7 +13,7 @@
 <body>
 	Playlists da academia:
 	<div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4 academiasportfolio" th:each="playlist : ${playlists}">
-          <h3 class="content-subhead" th:text="${playlist.nome}">
+          <h3 class="content-subhead" th:text="${playlist.nome}"></h3>
           <p>XX Musicas</p>
     </div>
     <!-- Botoes -->
