--- a/src/main/resources/templates/academias.html
+++ b/src/main/resources/templates/academias.html
@@ -47,8 +47,8 @@
         <a class="pure-menu-heading" href="">Gyj</a>
 
         <ul class="pure-menu-list">
-            <li class="pure-menu-item"><a href="/index" class="pure-menu-link">Home</a></li>
-            <li class="pure-menu-item"><a href="#" class="pure-menu-link">Academias</a></li>
+            <li class="pure-menu-item"><a href="/home" class="pure-menu-link">Home</a></li>
+            <li class="pure-menu-item"><a href="/academias" class="pure-menu-link">Academias</a></li>
             <li class="pure-menu-item"><a href="/cadastro" class="pure-menu-link">Registrar</a></li>
              <li class="pure-menu-item"><a href="/logout" class="pure-menu-link">Entrar</a></li>
         </ul>
