--- a/src/main/resources/templates/user/home.html
+++ b/src/main/resources/templates/user/home.html
@@ -42,11 +42,11 @@
         <a class="pure-menu-heading" href="">Gyj</a>
 
         <ul class="pure-menu-list">
-       		<li class="pure-menu-item pure-menu-selected"><a href="#" class="pure-menu-link">Home</a></li>
+       		<li class="pure-menu-item pure-menu-selected"><a href="/home" class="pure-menu-link">Home</a></li>
              <li class="pure-menu-item pure-menu-has-children pure-menu-allow-hover">
             	<a href="#" id="menuLink1" class="pure-menu-link">Profile</a>
 	            <ul class="pure-menu-children">
-	                <li class="pure-menu-item"><a href="/moderador/cadastrarAcademia" class="pure-menu-link">Cadastrar Academia</a></li>
+	                <li class="pure-menu-item"><a href="/moderador/cadastroAcademia" class="pure-menu-link">Cadastrar Academia</a></li>
 	                <li class="pure-menu-item"><a href="/moderador/academias?moderador=1" class="pure-menu-link">Academias cadastradas</a></li>
 	             </ul>
        		 </li>
