Renomeia Layout para layoutBase
- Adicionado em profile.html e home.html

--- a/src/main/resources/templates/layout/layoutBase.html
+++ b/src/main/resources/templates/layout/layoutBase.html
@@ -5,18 +5,19 @@
      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
     
 <head>
-	<meta charset="UTF-8"/></meta>
+	<meta charset="UTF-8"></meta>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"></meta>
 	<meta name="description" content="Sistema GYJ"></meta>
 	<title>Gyj - Reprodutor Compartilhado</title>
 	<!-- Links dos CSS comuns-->
 	<link rel="stylesheet" type="text/css" th:href="@{/css/GyjCustom.css}"/>
-	<link rel="stylesheet" type="text/css" th:href="@{/css/pure/pure-min.css}"></link>
-	<link rel="stylesheet" type="text/css" th:href="@{/css/pure/grids-responsive-min.css}"></link>
-	<link rel="stylesheet" type="text/css" th:href="@{http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css}"></link>
-	<link rel="stylesheet" type="text/css" th:href="@{/css/layouts/marketing.css}"></link>
+	<link rel="stylesheet" type="text/css" th:href="@{/css/pure/pure-min.css}"/>
+	<link rel="stylesheet" type="text/css" th:href="@{/css/pure/grids-responsive-min.css}"/>
+	<link rel="stylesheet" type="text/css" th:href="@{http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css}"/>
+	<link rel="stylesheet" type="text/css" th:href="@{/css/layouts/marketing.css}"/>
 </head>
-<body >
+
+<body>
 
 	<div class="header">
 	    <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
