--- a/src/main/resources/templates/user/home.html
+++ b/src/main/resources/templates/user/home.html
@@ -1,69 +1,14 @@
 <!doctype html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml" 
+	xmlns:th="http://www.thymeleaf.org"
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+    layout:decorator="layout/layoutBase">
+
 <head>
-<meta charset="utf-8"></meta>
-<meta name="viewport" content="width=device-width, initial-scale=1.0"></meta>
-<meta name="description" content="Sua tela inicial."></meta>
-<title>Gyj - Reprodutor Compartilhado</title>
-<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css"></link>
-<link rel="stylesheet" href="/css/GyjCustom.css"/>
-<script type="text/javascript" src="js/home.js"></script> 
-
-<!--[if lte IE 8]>
-  
-    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/grids-responsive-old-ie-min.css">
-  
-<![endif]-->
-<!--[if gt IE 8]><!-->
-  
-    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/grids-responsive-min.css"></link>
-  
-<!--<![endif]-->
-
-
-
-<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css"></link>
-
-
-
-  
-    <!--[if lte IE 8]>
-        <link rel="stylesheet" href="css/layouts/marketing-old-ie.css"></link>
-    <![endif]-->
-    <!--[if gt IE 8]><!-->
-        <link rel="stylesheet" href="css/layouts/marketing.css"></link>
-    <!--<![endif]-->
-  
+	<title>Gyj - Reprodutor Compartilhado</title>
 </head>
-<body>
 
-<div class="header">
-    <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
-        <a class="pure-menu-heading" href="">Gyj</a>
-
-        <ul class="pure-menu-list">
-       		<li class="pure-menu-item pure-menu-selected"><a href="/home" class="pure-menu-link">Home</a></li>
-             <li class="pure-menu-item pure-menu-has-children pure-menu-allow-hover">
-            	<a href="#" id="menuLink1" class="pure-menu-link">Profile</a>
-	            <ul class="pure-menu-children">
-	                <li class="pure-menu-item"><a href="/moderador/cadastroAcademia" class="pure-menu-link">Cadastrar Academia</a></li>
-	                <li class="pure-menu-item"><a href="/moderador/academias?moderador=1" class="pure-menu-link">Academias cadastradas</a></li>
-	             </ul>
-       		 </li>
-            <li class="pure-menu-item"><a href="/academias" class="pure-menu-link">Academias</a></li>
-            <li class="pure-menu-item"><a href="/cadastro" class="pure-menu-link">Registrar</a></li>
-            <li class="pure-menu-item"><a href="/logout" class="pure-menu-link">Sair</a></li>
-            
-        </ul>
-    </div>
-</div>
-	<!-- <div class="youtubePlayer">
-    
-        <iframe id="ytplayer" type="text/html" width="640" height="390"	src="http://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1" frameborder="0"/>
-
-    </div> 
-    -->
-    
+<section layout:fragment="content">
     
  <div>
 	 <div class="content-custom">
@@ -96,11 +41,6 @@
 		</div>
 	</div>
  </div>
- 
- <!--  
-	<div id="footer" class="footer l-box is-center">
-	     2016 - GyJ - Todos os direitos reservados.
-	</div>
--->
-</body>
+
+</section>
 </html>
