--- a/src/main/resources/templates/moderador/academia/playlists.html
+++ b/src/main/resources/templates/moderador/academia/playlists.html
@@ -1,16 +1,15 @@
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<!doctype html>
+<html xmlns="http://www.w3.org/1999/xhtml" 
+	xmlns:th="http://www.thymeleaf.org"
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+    layout:decorator="layout/layoutBase">
+
 <head>
-<meta charset="UTF-8"/>
-	<meta name="description" content="Gy-J"/>
-	<meta name="keywords" content="Gy-J, gyj"/>
-	<title>Gy-J - Playlists</title>
-    <link rel="stylesheet" href="/css/pure/pure-min.css"/>
-    <link rel="stylesheet" href="/css/GyjCustom.css"/>
-    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css"></link>
-    <script type="text/javascript" src=""></script> 
+	<title>Gyj - Reprodutor Compartilhado</title>
 </head>
-<body>
+
+<section layout:fragment="content">
+    
 	Playlists da academia:
 	<div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4 academiasportfolio" th:each="playlist : ${playlists}">
           <h3 class="content-subhead" th:text="${playlist.nome}"></h3>
@@ -21,5 +20,5 @@
 	    <i class="fa fa-plus"></i>
 	    Nova
 	</button>
-</body>
+</section>
 </html>
