--- a/src/main/resources/templates/cadastro.html
+++ b/src/main/resources/templates/cadastro.html
@@ -1,52 +1,15 @@
 <!doctype html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml" 
+	xmlns:th="http://www.thymeleaf.org"
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+    layout:decorator="layout/layoutBase">
+
 <head>
-    <meta charset="utf-8"></meta>
-	<meta name="description" content="Gy-J"/>
-	<meta name="keywords" content="Gy-J, gyj"/>
-	<link rel="stylesheet" href="/css/pure/pure-min.css"/>
-	<link rel="stylesheet" href="/css/GyjCustom.css"/> 
-    <script type="text/javascript" src="js/cadastro.js"></script>
-    <title>Gyj - Cadastro</title>
-
-	<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css"></link>
-
-	<!--[if lte IE 8]>
-	  
-	    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/grids-responsive-old-ie-min.css">
-	  
-	<![endif]-->
-	<!--[if gt IE 8]><!-->
-	  
-	    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/grids-responsive-min.css"></link>
-	  
-	<!--<![endif]-->
-
-	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css"></link>
-
-    <!--[if lte IE 8]>
-        <link rel="stylesheet" href="css/layouts/marketing-old-ie.css"></link>
-    <![endif]-->
-    <!--[if gt IE 8]><!-->
-        <link rel="stylesheet" href="css/layouts/marketing.css"></link>
-    <!--<![endif]-->
-  
+	<title>Gyj - Reprodutor Compartilhado</title>
 </head>
-<body>
 
-<div class="header">
-    <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
-        <a class="pure-menu-heading" href="">Gyj</a>
-
-        <ul class="pure-menu-list">
-            <li class="pure-menu-item"><a href="/index" class="pure-menu-link">Home</a></li>
-            <li class="pure-menu-item"><a href="/academias" class="pure-menu-link">Academias</a></li>
-            <li class="pure-menu-item"><a href="/cadastro" class="pure-menu-link">Registrar</a></li>
-             <li class="pure-menu-item"><a href="/login" class="pure-menu-link">Entrar</a></li>
-        </ul>
-    </div>
-</div>
- 	
+<section layout:fragment="content">
+    
  	<br></br>
 	<div class="content">
         <div class="pure-g">
@@ -83,8 +46,6 @@
 			alert('Falha ao cadastrar. Por favor tente novamente.');
 		</script>
 	</span>
-	<div class="footer l-box is-center">
-        2016 - GyJ - Todos os direitos reservados.
-   	</div>
-</body>
+	
+</section>
 </html>
