--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="/css/GyjCustom.css"/> 
     <script type="text/javascript" src="js/cadastro.js"></script>
     
-    <title>Gyj - Cadastro</title>
+    <title>Gyj - Login</title>
 
 	<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css"></link>
 
